# todo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
todo/: cli.py
